2008-09-29  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/i386.opt: Add msse2avx.

	* config/i386/linux.h (ASM_SPEC): New.  Support -msse2avx.
	* config/i386/linux64.h (ASM_SPEC): Likewise.

	* doc/invoke.texi: Document -msse2avx.

2008-09-29  Eric Botcazou  <ebotcazou@adacore.com>

	* dwarf2out.c (constant_size): Use HOST_WIDE_INT in parameter type.

2008-09-29  Joseph Myers  <joseph@codesourcery.com>

	* ifcvt.c (noce_emit_store_flag): If using condition from original
	jump, reverse it if if_info->cond was reversed.

2008-09-29  Eric Botcazou  <ebotcazou@adacore.com>

	* expr.c (expand_expr_real_1) <normal_inner_ref>: Force op0 to
	non-constant memory if it cannot be forced to constant memory.
	Overhaul surrounding code and factor out common condition.

2008-09-29  Jeff Law <law@redhat.com>

	* reload1.c (alter_reg): Add missing curly braces.

2008-09-29  Michael J. Eager  <eager@eagercon.com>

	* config/rs6000/predicates.md (easy_fp_constant): Single FP consts
	are easy.
	* config/rs6000/rs6000.c (rs6000_override_options): Move
	rs6000_init_hard_regno_mode_ok after all options changed.
	Set rs6000_single_float, rs6000_double_float if TARGET_HARD_FLOAT.
	(rs6000_handle_option): Process -msingle-float, -mdouble-float,
	-msimple-fpu flags.  Add warning messages if single FP not configured.
	(rs6000_file_start): Output gnu_attribute for single-float.
	(legitimate_lo_sum_address_p): Condition on TARGET_DOUBLE_FLOAT.
	(rs6000_legitimize_address): Likewise.
	(rs6000_legitimize_reload_address): Likewise.
	(rs6000_emit_move): Condition on TARGET_DOUBLE_FLOAT,
	TARGET_SINGLE_FLOAT.
	(function_arg_advance): Likewise (partial conversion).
	(setup_incoming_varargs): Condition on TARGET_DOUBLE_FLOAT.
	(rs6000_gimplify_va_arg): Condition on TARGET_DOUBLE_FLOAT,
	TARGET_SINGLE_FLOAT.
	(rs6000_split_multireg_move): Condition on TARGET_DOUBLE_FLOAT.
	(rs6000_emit_prologue): Likewise.
	(rs6000_function_value): Condition on TARGET_DOUBLE_FLOAT,
	TARGET_SINGLE_FLOAT.